--- a/pom.xml
+++ b/pom.xml
@@ -44,4 +44,12 @@
         </plugins>
     </build>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub OWNER Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/youlanqiang/mixORM</url>
+        </repository>
+    </distributionManagement>
+
 </project>
